agrocd-istio/destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rollout-ds
  namespace: ar-ns
spec:
  host: sample-application # interpreted as sample-application.ar-ns.svc.cluster.local
  subsets:
  - name: baseline
    labels:
      version: baseline
  - name: canary
    labels:
      version: canary
